2003-03-07  Mark McLoughlin  <mark@skynet.ie>

	* gkb.c: (help_cb):
	* prop-add.c: (addhelp_cb):
	* prop-map.c: (gkb_prop_map_help_clicked):
	* prop.c: (prophelp_cb): update for screen-exec changes.

2003-01-20  Shivram U  <shivaram.upadhyayula@wipro.com>

	* prop.c, prop-add.c: Close the "Select Keyboard" dialog if the 
	preferences window is closed.

2003-01-22  Irene Ryan <irene.ryan@sun.com>

	* /help/C/gkb.xml, gkb-C.omf: updated help files for GNOME 2.2
	* /help/C/figures/gkb_applet.png: updated screenshot for help file
	
2002-12-14  Fernando Herrera <fherrera@onirica.com>

	* GNOME_KeyboardApplet_Factory.server.in.in: added bugzilla * attributtes

2002-12-08  Szabolcs Ban  <shooby@gnome.hu>

	* gkb.c, keygrab.c: Keyboard grabbing and filter now checks keys by
	  Xevent (working right on my broken system, too), fix for #100700
	* prop-add.c: removed an ugly g_message

2002-12-07  Shivram U  <shivaram.upadhyayula@wipro.com>

        * system.c (gkb_system_set_keymap_idle): Using g_strdup_print() to
        allocate for the error string instead of using a static array. (#93473)

2002-12-05  Szabolcs Ban  <shooby@gnome.hu>

	* gkb/kr.png, xmodmap/xmodmap.kr, descs/KR_korean.keyprop: Added (at
          last) the KS (Korean Industrial Standard) keyboard layout and nice
	  flag from Donggyoo Lee <donggyoo@kmaritime.ac.kr>
	* Corrected Yugoslavia to Serbia and Montenegro everywhere,
          hopefully. Thanks for Aleksandar Milovac <amilovac@ptt.yu>

2002-12-04  Shivram U  <shivaram.upadhyayula@wipro.com>

	* system.c: A minor modification to the error string displayed when the
	 xmodmap command is not in the user's PATH. (#93473)

2002-12-02  Christian Neumair  <chris@gnome-de.org>

	* prop.c: Made tabs hig compliant (removed mnemonics).

2002-11-30  Szavolcs Ban <shooby@gnome.hu>

	* gkb.c: "correct" pixmap size, cosmetic change (out shadow for
          frame)
	* prop-list.c: Stock buttons.
	* prop-map.c: Fix of modality bug #94154, Simplifying editor dialog 